--- a/styles.css
+++ b/styles.css
@@ -321,7 +321,7 @@ footer {
     width: 100%; /* Ensure it takes full width */
     box-sizing: border-box; /* Include padding in width */
     margin-top: auto; /* Push footer to the bottom of the page */
-	position: absolute;
+	position: fixed;
 	bottom: 0;
 }
 
