--- a/styles.css
+++ b/styles.css
@@ -118,7 +118,7 @@ header h1 {
     flex: 1;
     padding: 20px;
     margin-left: 250px; /* Adjust according to sidebar width */
-	margin-bottom: 70px;
+	margin-bottom: 60px;
     box-sizing: border-box; /* Include padding in width */
 }
 
@@ -250,7 +250,7 @@ header h1 {
         padding: 10px; /* Add padding for spacing */
         width: 100%; /* Ensure full width */
         box-sizing: border-box; /* Include padding in width */
-        margin-bottom: 70px; /* Add extra space to prevent overlap with footer */
+		margin-bottom: 80px;
     }
 
     /* Sidebar adjustments */
@@ -307,6 +307,9 @@ header h1 {
         position: relative; /* Ensure positioning context */
         left: -5px; /* Move commandments container 5px to the left */
     }
+	footer {
+		margin-top: 10px;
+	}
 }
 
 
@@ -322,11 +325,8 @@ footer {
     text-align: center;
     width: 100%; /* Ensure it takes full width */
     box-sizing: border-box; /* Include padding in width */
-    position: fixed; /* Fix the footer at the bottom */
-    bottom: 0; /* Align it to the bottom */
-    left: 0; /* Ensure it stretches across the entire width */
-    z-index: 1000; /* Ensure it stays on top of other content */
-    height: 50px; /* Adjust the height if necessary */
+    position: relative; /* Change to relative positioning */
+    margin-top: 20px; /* Add some margin to separate from content */
 }
 
 footer a {
